journal/frontend/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: kbp-study
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: happyjoy1234.asuscomm.com
  - http:
      paths:
      - path: /api
        backend:
          serviceName: frontend
          servicePort: 8080
